update configuration and fix typos

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -40,3 +40,12 @@ linters-settings:
         disabled: false
         arguments:
           - "disableStutteringCheck"
+  misspell:
+    locale: UK
+    extra-words:
+      - typo: "sanetisation"
+        correction: "sanitisation"
+      - typo: "sanetise"
+        correction: "sanitise"
+      - typo: "sanetising"
+        correction: "sanitising"
