--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,11 @@ repos:
     types: [go]
     pass_filenames: false
 
+- repo: https://github.com/golangci/misspell
+  rev: v0.6.0
+  hooks:
+    - id: misspell
+
 - repo: https://github.com/ARMmbed/continuous-delivery-scripts.git
   rev: 2.5.0
   hooks:
