--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           go-version: ${{ env.go_version }}
       - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11' 
       - uses: FranzDiebold/github-env-vars-action@v2
       - name: Install CI/CD tools
         run: pip install continuous-delivery-scripts>=2.7 && pip list
