:gear: generate sboms

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,6 +16,8 @@ archives:
       {{- if eq .Arch "amd64" }}x86_64
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
+sboms:
+  - artifacts: source
 checksum:
   name_template: 'checksums.txt'
 snapshot:
