Update goreleaser yaml to work with version 2

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,5 @@
+version: 2
+
 env:
   - GO111MODULE=on
 # Commented out because requires Pro features
@@ -21,7 +23,7 @@ sboms:
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ incpatch .Tag }}-dev"
+  version_template: "{{ incpatch .Tag }}-dev"
 changelog:
   sort: asc
   filters:
