--- a/utils/config/fixtures/env-test.env
+++ b/utils/config/fixtures/env-test.env
@@ -1,4 +1,4 @@
-# These env vars will map to a struct the embeds another struct with no mapstructure tag set (it will expect it's struct name as part of the env var)
+# These env vars will map to a struct the embeds another struct with no mapstructure tag set (it will expect its struct name to be part of the env var)
 WITH_NO_TAG_TESTBASECFG_EMBEDDED1="embedded 1"
 WITH_NO_TAG_TESTBASECFG_EMBEDDED2="embedded 2"
 WITH_NO_TAG_NON_EMBEDDED1="non-embedded 1"
