:lock: Update secrets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
     steps:
     - uses: actions/setup-python@v5
     - name: Install tools
-      run: pip install detect-secrets==1.0.3 && pip list
+      run: pip install detect-secrets[gibberish]==1.5.0 && pip list
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
