--- a/.golangci.pre-commit.yaml
+++ b/.golangci.pre-commit.yaml
@@ -1,25 +1,38 @@
+version: "2"
 run:
-  timeout: 5m
-
-  # Run linters over integration tests
   build-tags:
     - integration
-
 linters:
-  disable-all: true # Disable defaults, then enable the ones we want
-  enable:
-    - goimports
-    - gci
-
-# Auto-fix any found issues
+  default: none
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
 issues:
   fix: true
-
-linters-settings:
-  goimports:
-    local-prefixes: github.com/ARM-software
-  gci:
-    sections:
-      - Standard
-      - Default
-      - Prefix(github.com/ARM-software)
+formatters:
+  enable:
+    - gci
+    - goimports
+  settings:
+    gci:
+      sections:
+        - Standard
+        - Default
+        - Prefix(github.com/ARM-software)
+    goimports:
+      local-prefixes:
+        - github.com/ARM-software
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
