:gear: Update secret for dependabot workflow

--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Assert news
         run: cd-assert-news -b ${CI_ACTION_REF_NAME}
         env:
-          GIT_TOKEN: ${{ secrets.GIT_SECRET }}
+          GIT_TOKEN: ${{ secrets.ARM_SOFTWARE_TOKEN }}
       - name: Auto-merge the PR
         run: gh pr merge --auto --squash --body "Dependency upgrade $PR_URL" --merge "$PR_URL"
         env:
