:gear: Update secret in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Assert news
         run: cd-assert-news -b ${CI_ACTION_REF_NAME}
         env:
-          GIT_TOKEN: ${{ secrets.GIT_SECRET }}
+          GIT_TOKEN: ${{ secrets.ARM_SOFTWARE_TOKEN }}
       - name: Report failure if needed
         if: ${{ failure() }}
         run: |
